deps/src/cmake-3.13.4/Tests/RunCMake/Syntax/CMP0053-Dollar-OLD-stderr.txt
^CMake Deprecation Warning at CMP0053-Dollar-OLD.cmake:1 \(cmake_policy\):
  The OLD behavior for policy CMP0053 will be removed from a future version
  of CMake.

  The cmake-policies\(7\) manual explains that the OLD behaviors of all
  policies are deprecated and that a policy should be set to OLD only under
  specific short-term circumstances.  Projects should be ported to the NEW
  behavior and not rely on setting a policy to OLD.
Call Stack \(most recent call first\):
  CMakeLists.txt:3 \(include\)
+
-->value<--
CMake Error at CMP0053-Dollar-OLD.cmake:6 \(message\):
  Syntax error in cmake code at

    .*CMP0053-Dollar-OLD.cmake:6

  when parsing string

    -->\${\$}<--

  syntax error, unexpected \$, expecting } \(7\)
Call Stack \(most recent call first\):
  CMakeLists.txt:3 \(include\)$
